--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
-    "framer-motion": "^10.16.1",
+    "framer-motion": "^10.18.0",
+    "mongoose": "^8.1.1",
     "next": "^13.5.6",
     "postcss": "^8.4.33",
     "react": "18.2.0",
