--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
     "framer-motion": "^10.18.0",
+    "locomotive-scroll": "^5.0.0-beta.11",
     "mongoose": "^8.1.1",
     "next": "^13.5.6",
     "postcss": "^8.4.33",
